--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,33 +1,33 @@
-# CMake 最小版本
+# Minimum CMake version required
 cmake_minimum_required(VERSION 3.16)
 
-# 项目信息
+# Project information
 project(WaterQualityAnalysis VERSION 1.0.0 LANGUAGES CXX)
 
-# 设置 C++ 标准
+# Set C++ standard
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# 启用 Qt 特性
+# Enable Qt features
 set(CMAKE_AUTOMOC ON)
-set(CMAKE_AUTORCC ON) # 确保资源文件被编译
+set(CMAKE_AUTORCC ON) # Ensure resource files are compiled
 set(CMAKE_AUTOUIC ON)
 
-# 查找 Qt6 组件
+# Find Qt6 components
 find_package(Qt6 REQUIRED COMPONENTS Widgets WebEngineWidgets)
 
-# 包含头文件目录
+# Include header file directories
 include_directories(include)
 
-# 源文件
+# Source files
 file(GLOB_RECURSE SOURCES "src/*.cpp")
 file(GLOB_RECURSE HEADERS "include/*.hpp")
 
-# 添加资源文件
+# Add resource files
 set(RESOURCES resources.qrc)
 
-# 可执行文件
+# Executable file
 add_executable(water_quality_tool main.cpp ${SOURCES} ${HEADERS} ${RESOURCES})
 
-# 链接 Qt6 库
+# Link Qt6 libraries
 target_link_libraries(water_quality_tool PRIVATE Qt6::Widgets Qt6::WebEngineWidgets)
